# self-evolution

./: .gitignore  ARCHITECTURE.md  BROWSER_RESEARCH_IMPLEMENTATION.md  EVOLUTION_PROGRESS_20260404.md  EVOLUTION_PROGRESS_20260404_PHASE3.md  EVOLUTION_PROGRESS_20260405.md  IMPLEMENTATION_PLAN.md  README.md  ROADMAP.md  SKILL.md  advanced_deep_optimization.js  advanced_real_evolution.js  advanced_stable_evolution.js  auto_startup.js  autostart_config.json  check_whitespace.py  complete_evolution.js  configure_database.js  configure_network.js  configure_security.js  deep_cognitive_abilities.js  deep_optimization.js  deploy_production.ps1  deploy_production_fixed.ps1  enable_full_features.js  ensure_cross_session.js  expand_evomap.js  find_all_or.py  find_close.py  find_sql_error.py  fix_export_final.py  fix_syntax.py  full_autonomous_evolution.js  index.py  init_modules.js  integration_report.js  package.json  production_config.json  pyproject.toml  real_evolution_core.js  (+20 more)
agents/: improvement_agent.js
config/: settings.yaml
core/: unified_evolution.js
designs/: DESIGNS_INDEX.md  DESIGN_INDEPENDENT_PERSONALITY.md  DESIGN_SELF_AWARENESS.md  SELF_EVOLUTION_SYSTEM_DESIGN.md  browser-automation-technical-design.md  enterprise-group-chat-design.md
engines/: evolution_engine.js
plans/: FULL_AUTONOMOUS_EVOLUTION_ARCHITECTURE.md  GENE_REPRODUCTION_PLAN.md  browser_research_implementation_plan.md  cron_monitoring_strategy.md  research_strategy_manager.js  web-engine-team-technical-plan.md
scripts/: browser_research.js  error_handler.js  seed_knowledge.py  (+1 more)
sevo/: cli.py  (+1 more)
(+83 files in other folders)
