[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "sevo"
version = "0.1.0"
description = "Complete Self-Evolution System for AI Agents"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "primaxlab"}
]
keywords = ["ai", "self-evolution", "agent", "memory", "consciousness"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
dev = ["pytest", "pytest-cov"]

[project.scripts]
sevo = "sevo.cli:main"

[tool.setuptools.packages.find]
where = ["."]